# Insurance_AutoResearch

./: .gitignore  AGENT.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  pyproject.toml
.codex/: config.toml
.github/workflows/: ci.yml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
configs/: default.toml
configs/experiments/: direct_pure_premium.toml  (+2 more)
docs/: CLI.md  RESEARCH_LOG.md  RUN_WITH_CLAUDE_CODE.md  RUN_WITH_CODEX.md  SPEC_compute_budget_and_open_model_robustness.md  SPEC_memory_and_leaderboard.md  SPEC_memory_and_leaderboard_part2.md  architecture.md  auto_research_plan.md  autonomous_session_workflow.md  codex_build_instructions.md  experiment_protocol.md  requirements.md
scripts/: fetch_fremtpl2.py  generate_synthetic_data.py
tests/: test_anonymise.py  test_bootstrap.py  test_calibration.py  test_calibration_utility.py  test_comparison_registry.py  test_compute_budget.py  test_context_shape.py  test_cv_variance.py  test_handoff.py  test_holdout_vault.py  test_integrity_whitelist.py  test_loader.py  test_memory_access_gate.py  test_memory_checkpoint.py  test_memory_dashboard.py  test_memory_harvester.py  test_memory_identity.py  test_memory_insights.py  test_memory_playbook.py  test_memory_store.py  test_metric_panel.py  test_metrics.py  test_milestone_scripted.py  test_phase4_controller.py  test_preprocessing.py  test_promotion_null.py  test_registry.py  test_resampling.py  test_runner.py  test_session.py  test_splits.py
(+76 files in other folders)
